[tool.poetry]
name = "binsec-dojo"
version = "0.1.0"
description = ""
authors = ["limoiie <limo.iie4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.18.1"
fire = "^0.5.0"
rich = "^13.7.0"
frida = "^16.1.8"
frida-tools = "^12.3.0"
pwntools = "^4.11.1"
r2pipe = "^1.8.4"
angr = "^9.2.83"
ropgadget = "v7.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pyright = "^1.1.344"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
